feat: SKILL.md structural audit + security config + full test coverage
- Delete dead code: BaseApi, BaseUseCase, BaseRepository, OperationResponse
- Update parent to 0.0.2-SNAPSHOT, add app-test-support dependency
- Add eclipse-java-formatter.xml for spotless
- Dockerfile: eclipse-temurin:21-jre -> 25-jre
- Rewrite SecurityConfig: OAuth2 JWT resource server, method security
- Add @NxAdmin/@NxUser/@NxPublic to all 12 controllers
- Fix test infra: BaseIntegration extends core, JWT beans, authenticated ITs
- Add 7 test providers (Brand, Attribute, Review, Warranty, CountryTax, MediaAsset, PriceRule)
- Add 7 controller unit tests (42 tests)
- Add 6 use case unit tests (Brand, Attribute, Review, Warranty, CountryTax, PriceRule)
- Total: 156 tests, 0 failures