@@ -1,21 +1,16 @@
 package com.backandwhite.application.usecase.impl;
 
+import com.backandwhite.application.port.out.DropshippingPort;
 import com.backandwhite.application.usecase.ProductSyncUseCase;
 import com.backandwhite.domain.exception.ExternalServiceException;
 import com.backandwhite.domain.model.Product;
 import com.backandwhite.domain.model.ProductSyncResult;
 import com.backandwhite.domain.repository.CategoryRepository;
 import com.backandwhite.domain.repository.ProductRepository;
-import com.backandwhite.application.port.out.DropshippingPort;
 import com.backandwhite.infrastructure.client.cj.dto.CjProductDetailDto;
 import com.backandwhite.infrastructure.client.cj.dto.CjProductListPageDto;
 import com.backandwhite.infrastructure.client.cj.dto.CjProductListV2ItemDto;
 import com.backandwhite.infrastructure.client.cj.mapper.CjProductDetailMapper;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
-import org.springframework.data.domain.Page;
-import org.springframework.stereotype.Service;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -23,6 +18,10 @@ import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
+import org.springframework.data.domain.Page;
+import org.springframework.stereotype.Service;
 
 @Log4j2
 @Service
@@ -34,13 +33,11 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
     /** Maximum parallel requests to CJ to avoid saturating the rate limit */
     private static final int PARALLEL_FETCH_THREADS = 5;
 
-    private final ExecutorService fetchExecutor = Executors.newFixedThreadPool(
-            PARALLEL_FETCH_THREADS,
-            r -> {
-                Thread t = Thread.ofVirtual().unstarted(r);
-                t.setDaemon(true);
-                return t;
-            });
+    private final ExecutorService fetchExecutor = Executors.newFixedThreadPool(PARALLEL_FETCH_THREADS, r -> {
+        Thread t = Thread.ofVirtual().unstarted(r);
+        t.setDaemon(true);
+        return t;
+    });
 
     private final DropshippingPort cjClient;
     private final ProductRepository productRepository;
@@ -65,8 +62,8 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
                 break;
             }
 
-            log.info("Processing page {} with {} local products (parallel={})...",
-                    page, productIds.size(), PARALLEL_FETCH_THREADS);
+            log.info("Processing page {} with {} local products (parallel={})...", page, productIds.size(),
+                    PARALLEL_FETCH_THREADS);
 
             // Parallel fetch — max PARALLEL_FETCH_THREADS concurrent requests to CJ
             List<CompletableFuture<Optional<Product>>> futures = productIds.stream()
@@ -81,14 +78,10 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
                             log.warn("Failed to fetch product pid={}: {}", pid, e.getMessage());
                             return Optional.<Product>empty();
                         }
-                    }, fetchExecutor))
-                    .toList();
+                    }, fetchExecutor)).toList();
 
-            List<Product> productsToSync = futures.stream()
-                    .map(CompletableFuture::join)
-                    .filter(Optional::isPresent)
-                    .map(Optional::get)
-                    .toList();
+            List<Product> productsToSync = futures.stream().map(CompletableFuture::join).filter(Optional::isPresent)
+                    .map(Optional::get).toList();
 
             int skipped = productIds.size() - productsToSync.size();
 
@@ -122,16 +115,11 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
             }
         }
 
-        log.info("CJ Dropshipping full sync completed: updated={}, created={}, skipped={}, total={}",
-                totalUpdated, totalCreated, totalSkipped, totalCreated + totalUpdated);
+        log.info("CJ Dropshipping full sync completed: updated={}, created={}, skipped={}, total={}", totalUpdated,
+                totalCreated, totalSkipped, totalCreated + totalUpdated);
 
-        return ProductSyncResult.builder()
-                .created(totalCreated)
-                .updated(totalUpdated)
-                .total(totalCreated + totalUpdated)
-                .page(page)
-                .hasMore(false)
-                .build();
+        return ProductSyncResult.builder().created(totalCreated).updated(totalUpdated)
+                .total(totalCreated + totalUpdated).page(page).hasMore(false).build();
     }
 
     @Override
@@ -140,8 +128,7 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
         // page is 1-based from the frontend, convert to 0-based for Spring Data
         int zeroBasedPage = page - 1;
         log.info("Syncing local products page {} (0-based={}, size={}, forceOverwrite={}, categoryIds={})...", page,
-                zeroBasedPage,
-                size, forceOverwrite, categoryIds);
+                zeroBasedPage, size, forceOverwrite, categoryIds);
 
         Page<String> idsPage = (categoryIds != null && !categoryIds.isEmpty())
                 ? productRepository.findProductIdsByCategoryIds(categoryIds, zeroBasedPage, size)
@@ -150,14 +137,11 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
 
         if (productIds.isEmpty()) {
             log.info("No more local products on page {}. Sync finished.", page);
-            return ProductSyncResult.builder()
-                    .created(0).updated(0).total(0)
-                    .page(page).hasMore(false)
-                    .build();
+            return ProductSyncResult.builder().created(0).updated(0).total(0).page(page).hasMore(false).build();
         }
 
-        log.info("Processing {} local products (page {}, parallel={})...",
-                productIds.size(), page, PARALLEL_FETCH_THREADS);
+        log.info("Processing {} local products (page {}, parallel={})...", productIds.size(), page,
+                PARALLEL_FETCH_THREADS);
 
         // Parallel fetch — max PARALLEL_FETCH_THREADS concurrent requests to CJ
         List<CompletableFuture<Optional<Product>>> futures = productIds.stream()
@@ -172,14 +156,10 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
                         log.warn("Failed to fetch product pid={}: {}", pid, e.getMessage());
                         return Optional.<Product>empty();
                     }
-                }, fetchExecutor))
-                .toList();
+                }, fetchExecutor)).toList();
 
-        List<Product> productsToSync = futures.stream()
-                .map(CompletableFuture::join)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+        List<Product> productsToSync = futures.stream().map(CompletableFuture::join).filter(Optional::isPresent)
+                .map(Optional::get).toList();
 
         int skipped = productIds.size() - productsToSync.size();
         int created = 0;
@@ -198,16 +178,11 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
         }
 
         boolean hasMore = idsPage.hasNext();
-        log.info("Page {} sync done: updated={}, created={}, skipped={}, hasMore={}",
-                page, updated, created, skipped, hasMore);
+        log.info("Page {} sync done: updated={}, created={}, skipped={}, hasMore={}", page, updated, created, skipped,
+                hasMore);
 
-        return ProductSyncResult.builder()
-                .created(created)
-                .updated(updated)
-                .total(created + updated)
-                .page(page)
-                .hasMore(hasMore)
-                .build();
+        return ProductSyncResult.builder().created(created).updated(updated).total(created + updated).page(page)
+                .hasMore(hasMore).build();
     }
 
     // ── Discover new products by category ────────────────────────────────────
@@ -224,11 +199,8 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
 
         if (categoryOffset >= totalCategories) {
             log.info("Discover: offset {} >= totalCategories {}. Nothing to do.", categoryOffset, totalCategories);
-            return ProductSyncResult.builder()
-                    .created(0).updated(0).total(0)
-                    .page(categoryOffset).hasMore(false)
-                    .totalCategories(totalCategories)
-                    .build();
+            return ProductSyncResult.builder().created(0).updated(0).total(0).page(categoryOffset).hasMore(false)
+                    .totalCategories(totalCategories).build();
         }
 
         String categoryId = l3Ids.get(categoryOffset);
@@ -242,30 +214,25 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
         try {
             // Iterate CJ pages for this category (capped)
             for (int cjPage = 1; cjPage <= MAX_CJ_PAGES_PER_CATEGORY; cjPage++) {
-                CjProductListPageDto pageResult = cjClient.getProductListFiltered(
-                        cjPage, PAGE_SIZE, categoryId, null, null, null, 3, "desc");
+                CjProductListPageDto pageResult = cjClient.getProductListFiltered(cjPage, PAGE_SIZE, categoryId, null,
+                        null, null, 3, "desc");
 
-                List<CjProductListV2ItemDto> products = (pageResult != null)
-                        ? pageResult.getAllProducts()
-                        : List.of();
+                List<CjProductListV2ItemDto> products = (pageResult != null) ? pageResult.getAllProducts() : List.of();
 
                 if (products.isEmpty()) {
-                    log.info("Discover: CJ page {} returned EMPTY for category {} (totalRecords={})",
-                            cjPage, categoryId,
-                            pageResult != null ? pageResult.getTotalRecords() : "null");
+                    log.info("Discover: CJ page {} returned EMPTY for category {} (totalRecords={})", cjPage,
+                            categoryId, pageResult != null ? pageResult.getTotalRecords() : "null");
                     break;
                 }
 
                 // Extract product IDs and filter out those already in our DB
                 // listV2 uses "id" field, not "pid"
-                List<String> newPids = products.stream()
-                        .map(CjProductListV2ItemDto::getId)
-                        .filter(id -> id != null && !id.isBlank())
-                        .filter(id -> !productRepository.existsById(id))
+                List<String> newPids = products.stream().map(CjProductListV2ItemDto::getId)
+                        .filter(id -> id != null && !id.isBlank()).filter(id -> !productRepository.existsById(id))
                         .toList();
 
-                log.info("Discover: CJ page {} returned {} products, {} are new",
-                        cjPage, products.size(), newPids.size());
+                log.info("Discover: CJ page {} returned {} products, {} are new", cjPage, products.size(),
+                        newPids.size());
 
                 if (!newPids.isEmpty()) {
                     int[] result = fetchDetailAndSave(newPids);
@@ -288,14 +255,8 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
         categoryRepository.updateLastDiscoveredAt(categoryId);
         log.info("Discover: category {} done — created={}, updated={}", categoryId, created, updated);
 
-        return ProductSyncResult.builder()
-                .created(created)
-                .updated(updated)
-                .total(created + updated)
-                .page(categoryOffset)
-                .hasMore(hasMore)
-                .totalCategories(totalCategories)
-                .build();
+        return ProductSyncResult.builder().created(created).updated(updated).total(created + updated)
+                .page(categoryOffset).hasMore(hasMore).totalCategories(totalCategories).build();
     }
 
     /** Delay between sequential CJ detail API calls (ms) */
@@ -307,8 +268,7 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
 
     /**
      * Fetches full product detail from CJ sequentially with throttling to respect
-     * rate limits.
-     * Products are saved in batches of 10 for efficiency.
+     * rate limits. Products are saved in batches of 10 for efficiency.
      *
      * @return int[]{created, updated}
      */
@@ -346,7 +306,7 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
             }
         }
 
-        return new int[] { created, updated };
+        return new int[]{created, updated};
     }
 
     private Optional<Product> fetchDetailWithRetry(String pid) {
@@ -357,8 +317,8 @@ public class ProductSyncUseCaseImpl implements ProductSyncUseCase {
             } catch (ExternalServiceException e) {
                 if (e.getMessage() != null && e.getMessage().contains("Too many requests")
                         && attempt < MAX_RATE_LIMIT_RETRIES) {
-                    log.info("Rate limited on pid={}, backing off {}ms (attempt {}/{})",
-                            pid, RATE_LIMIT_BACKOFF_MS, attempt + 1, MAX_RATE_LIMIT_RETRIES);
+                    log.info("Rate limited on pid={}, backing off {}ms (attempt {}/{})", pid, RATE_LIMIT_BACKOFF_MS,
+                            attempt + 1, MAX_RATE_LIMIT_RETRIES);
                     try {
                         Thread.sleep(RATE_LIMIT_BACKOFF_MS);
                     } catch (InterruptedException ie) {
